transfer legacy posts

--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,10 @@ description: >- # used by seo meta and the atom feed
 url: "https://evan4c.github.io"
 
 github:
-  username: evan # change to your GitHub username
+  username: evan4C # change to your GitHub username
 
 twitter:
-  username: evan # change to your Twitter username
+  username: fanfunfanfun # change to your Twitter username
 
 social:
   # Change to your full name.
